# pathway

./: README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: continous-build.yml
gradle/wrapper/: gradle-wrapper.properties
pathway/: build.gradle  proguard-rules.pro
pathway/src/androidTest/java/dev/romainguy/graphics/path/: BitmapToPathTest.kt  PathDivisionTest.kt  PathIteratorTest.kt  SvgTest.kt  TestUtilities.kt
pathway/src/main/: AndroidManifest.xml
pathway/src/main/cpp/: CMakeLists.txt  Conic.cpp  Conic.h  Path.h  PathIterator.cpp  PathIterator.h  libpathway.map  pathway.cpp  scalar.h
pathway/src/main/cpp/math/: TVecHelpers.h
pathway/src/main/java/dev/romainguy/graphics/path/: Contours.kt  Geometry.kt  Image.kt  Paths.kt  Svg.kt
